--- a/computational mathematics - basic/6th sem/Первое задание/Практические задачи/2nd_task.ipynb
+++ b/computational mathematics - basic/6th sem/Первое задание/Практические задачи/2nd_task.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Задача Римана о распаде разрыва\n",
     "\n",
-    "Рассматривается одномерная область $ x \\in [-L, L] $, $L = 10$ м, заполненная идеальным газом (показатель адиабаты равен $\\frac{5}{3}$). По середине области $\\$ (при $x = 0$) располагается тонкая перегородка, по обе стороны от которой газ имеет различные термодинамические параметры. В частности, \n параметры газа слева от перегородки $𝑣_𝐿 = 0, 𝜌_𝐿 = 13\\frac{кг}{м^3}, 𝑃_𝐿 = 10$ атм, параметры газа справа от перегородки $𝑣_𝑅 = 0, 𝜌_𝑅 = 1.3\\frac{кг}{м^3}, 𝑃_𝑅 = 1$ атм. В \n момент времени $t = 0$ перегородку убирают. С помощью схемы Куранта-Изаксона-Риса (КИР) получить численное решение задачи о распаде \n разрыва до момента времени $0.02$ с.\n",
+    "Рассматривается одномерная область $ x \\in [-L, L] $, $L = 10$ м, заполненная идеальным газом (показатель адиабаты равен $\\frac{5}{3}$). По середине области (при $x = 0$) располагается тонкая перегородка, по обе стороны от которой газ имеет различные термодинамические параметры. В частности, параметры газа слева от перегородки $𝑣_𝐿 = 0, 𝜌_𝐿 = 13\\frac{кг}{м^3}, 𝑃_𝐿 = 10$ атм, параметры газа справа от перегородки $𝑣_𝑅 = 0, 𝜌_𝑅 = 1.3\\frac{кг}{м^3}, 𝑃_𝑅 = 1$ атм. В момент времени $t = 0$ перегородку убирают. С помощью схемы Куранта-Изаксона-Риса (КИР) получить численное решение задачи о распаде разрыва до момента времени $0.02$ с.\n",
     "\n",
     "### Статья на Wikipedia - https://ru.wikipedia.org/wiki/Задача_Римана_о_распаде_произвольного_разрыва"
    ]
